--- a/.classpath
+++ b/.classpath
@@ -1,7 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
+	<classpathentry kind="src" output="target/classes" path="src">
+		<attributes>
+			<attribute name="optional" value="true"/>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.testng.TESTNG_CONTAINER"/>
 	<classpathentry kind="lib" path="jar/commons-codec-1.10.jar"/>
 	<classpathentry kind="lib" path="jar/commons-collections4-4.1.jar"/>
@@ -17,5 +22,5 @@
 	<classpathentry kind="lib" path="jar/poi-scratchpad-3.17.jar"/>
 	<classpathentry kind="lib" path="jar/selenium-server-standalone-3.6.0.jar"/>
 	<classpathentry kind="lib" path="jar/xmlbeans-2.6.0.jar"/>
-	<classpathentry kind="output" path="bin"/>
+	<classpathentry kind="output" path="target/classes"/>
 </classpath>
